Fixes layout issues for small and medium displays for the student detail view on the current grades tab.

--- a/src/components/directives/studentsection/studentsetion.scss
+++ b/src/components/directives/studentsection/studentsetion.scss
@@ -9,6 +9,7 @@
 .student-section {
   text-align: center;
   margin:20px;
+  max-width: 1300px;
 
   .grade-item {
     padding-left: 40px;
